fixed res tab vertical align

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -422,7 +422,7 @@ footer {
     position: absolute;
     right: 9px;
     top: 0;
-    height: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: flex-end;
